# webmentions

./: .gitignore  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  util.py
.github/workflows/: ci.yaml
scanner/: bs4_utils.py  feed.py  main.py  mention_detector.py  mention_sender.py  mentions.py  request_utils.py  request_utils.pyi  test_mention_sender.py
tasks/: ci  cli  test  typecheck
tests/: test_config.py  test_db.py  test_mention_sender.py
webmentions/: article_queue.py  cli.py  config.py  log.py  notification_queue.py  queue_utils.py  util.py
webmentions/db/: __init__.py  models.py
webmentions/feed_queue/: __init__.py  in_process.py
webmentions/scanner/: article_handler.py  bs4_utils.py  errors.py  feed.py  main.py  mention_detector.py  mention_sender.py  request_utils.py  request_utils.pyi
webmentions/util/: aqueue.py  request_utils.py  time.py  url.py
